--- a/views/viewPartials/categoryDropdown.pug
+++ b/views/viewPartials/categoryDropdown.pug
@@ -1,7 +1,11 @@
 div.dropdown(style="display:inline;padding-right:15px;")
     button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
-        | Category: #{categoryObj.displayName} &nbsp
-        span.caret
+        if category
+            | Category: #{categoryObj.displayName} &nbsp
+            span.caret
+        else
+            | Select A Category &nbsp
+            span.caret
 
     ul.dropdown-menu(role='menu', aria-labelledby='dropdownMenu1')
         each category in categories
