--- a/views/viewPartials/popularUploadsPagination.pug
+++ b/views/viewPartials/popularUploadsPagination.pug
@@ -1,4 +1,4 @@
-nav.center-block.text-center(aria-label='Page navigation example')
+.center-block.text-center
     ul.pagination
         li.page-item
             a.page-link(href=`/media/popular/${previousNumber}?media=${media}&category${category}&within=${within}`) <
