updating size of navbar links

--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -204,3 +204,7 @@ style.
     .loginHeader {
         font-size:18px;
     }
+
+    .navbar-default .navbar-nav > li > a {
+        font-size:14px;
+    }
