--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,3 +1,8 @@
+style.
+  .pull-left {
+    font-weight:300;
+  }
+
 footer
   .container.text-center
     p.pull-left © 2020 NodeTube Organization &nbsp
