fix dropdowns on mobile

--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -26,11 +26,12 @@ block content
             // Non-video stuff (orderBy, sensitivity dropdowns,
 
             // CATEGORY DROPDOWN
-            include ../viewPartials/categoryDropdown
+            div.search-upload-buttons-container
+                include ../viewPartials/categoryDropdown
 
-            include ../viewPartials/popularUploadsMediaDropdown
+                include ../viewPartials/popularUploadsMediaDropdown
 
-            include ../viewPartials/sensitivityFilterDropdown
+                include ../viewPartials/sensitivityFilterDropdown
 
 
         include ../viewPartials/popularUploadsPagination
