--- a/views/viewPartials/popularUploadsMediaDropdown.pug
+++ b/views/viewPartials/popularUploadsMediaDropdown.pug
@@ -1,4 +1,4 @@
-div.dropdown(style="display:inline;padding-right:15px;")
+div.search-upload-buttons-container.dropdown(style="display:inline;padding-right:15px;")
     button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
         | File Type: #{media.charAt(0).toUpperCase() + media.slice(1)} &nbsp
         span.caret
