--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -152,6 +152,7 @@ style.
         border-radius: 7px;
     }
 
+    /* translate thing to make it centered even with overflow*/
     @media (max-width: 347px) {
         .preview-image {
             max-width: 280px;
