--- a/views/viewPartials/sensitivityFilterDropdown.pug
+++ b/views/viewPartials/sensitivityFilterDropdown.pug
@@ -1,4 +1,4 @@
-div.dropdown(style="display:inline")
+div.search-upload-buttons-container.dropdown(style="display:inline")
     if !user
         // show current loaded filter
         button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px")
