--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -168,11 +168,17 @@ style.
 
         .navbar-right {
             float: right !important;
-            margin-right: -45px;
+            margin-right: -95px;
         }
 
         .navbar-right ~ .navbar-right {
             margin-right: 0;
+        }
+    }
+
+    @media (min-width: 1042px) {
+        .navbar-right {
+            margin-right: -28px;
         }
     }
 
