--- a/views/media.pug
+++ b/views/media.pug
@@ -208,7 +208,7 @@ block content
                 // Upload Description
                 if upload.description
                     h4.fw(class="upload-description-value") Description
-                    p.fw(style="width:36%;text-align: center;margin: 0 auto;white-space:pre-line;word-wrap:break-word;" id="descriptionText") #{upload.description}
+                    p.fw(style="width:36%;text-align: center;margin: 0 auto;white-space:pre-line;word-wrap:break-word;min-width:240px;" id="descriptionText") #{upload.description}
 
                 br
                 br
@@ -277,10 +277,10 @@ block content
                         div.comment-containing-div.col-sm-6.col-sm-offset-3(style="margin-top:60px;text-align:center")
                             if commentCount == 1
                                 div(style="display:block")
-                                    h2.fw(style="text-align:left;") #{commentCount} Comment
+                                    h3.fw(style="text-align:left;font-size:30px;") #{commentCount} Comment
                             else
                                 div(style="display:block")
-                                    h2.fw(style="text-align:left;") #{commentCount} Comments
+                                    h3.fw(style="text-align:left;font-size:30px;") #{commentCount} Comments
                             each comment in comments
                                 if comment.commenter
                                     div.comment-thread
