--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -67,7 +67,7 @@ block content
         p(style="font-size:18px;margin-bottom: 27px;") Your current upload file size limit is #{user.privs.uploadSize} MB (#{user.privs.uploadSize / 1000} GB)
         br
 
-        h3.fw(style="font-size: 30px;") Select Upload
+        //h3.fw(style="font-size: 30px;") Select Upload
 
         if user.plan == 'free' && plus_enabled
           p You can raise this limit to 2000 MB by subscribing for&nbsp
